--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,10 @@
 cmake_minimum_required(VERSION 3.8)
 project(ggframe VERSION 1.0)
-find_package(X11 REQUIRED)
 
 option(build_example "build examples?" ON)
 set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
 set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
-
-include_directories(include)
 
 file(GLOB SOURCES src/*.cc)
 file(GLOB HEADERS include/*.h)
@@ -25,14 +22,21 @@ install(FILES ${HEADERS} DESTINATION include/${PROJECT_NAME})
 target_link_directories(
     ${PROJECT_NAME}
     PUBLIC
+		deps/opencv/lib
 )
 target_include_directories(
     ${PROJECT_NAME} 
     PUBLIC 
         deps/CImg-2.5.6
+        deps/opencv/include
 )
+
+file(GLOB OPENCV_LIBS deps/opencv/lib/*.lib)
+file(GLOB OPENCV_STATIC_LIBS deps/opencv/staticlib/*.lib)
 target_link_libraries(
     ${PROJECT_NAME} 
+		${OPENCV_LIBS}
+		${OPENCV_STATIC_LIBS}
 )
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)
 
@@ -52,7 +56,6 @@ if(APPLE)
     target_include_directories(
         ${PROJECT_NAME} 
         PUBLIC 
-            deps/screen_capture_lite/include
             deps/CImg-2.5.6
             ${X11_INCLUDE_DIR}
     )
